fixed header overlapping bug

--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body{
 
 .headerIcon {
   height: 100px;
-  width: 80px;
+  width: 6%;
   background-image: url('assets/images/beer_icon.png');
   background-size: contain;
   background-repeat: no-repeat;
@@ -34,7 +34,9 @@ body{
 }
 .headerName{
   font-size: 2.8rem;
-  margin: auto 25px auto 0;
+  text-align: center;
+  width: 20%;
+  margin: auto 0;
 }
 
 .mainContainer {
